--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "mssql": "^8.0.2",
     "nodemon": "^2.0.15",
     "swagger-ui-express": "^4.3.0",
