--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-DB_USER=sa
-DB_PWD=123456
-DB_NAME=clienti
-DB_SERVER=localhost\SQLEXPRESS
 CONNECTION_STRING=Server=tcp:moneyback.database.windows.net,1433;Initial Catalog=moneyback;Persist Security Info=False;User ID=adminserverwest;Password=m0N3y84cK!!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
+PORT=3000
