Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_backend-moneyback.yml
+++ b/.github/workflows/main_backend-moneyback.yml
@@ -21,10 +21,11 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install, build
+      - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
+          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -51,5 +52,5 @@ jobs:
         with:
           app-name: 'backend-moneyback'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_56E7D1B02ACB425D957370F8ACE04F05 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FF9FE96CC1E14744BF4153874F6094F9 }}
           package: .
