--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mssql": "^8.0.2",
     "nodemon": "^2.0.15",
     "swagger-ui-express": "^4.3.0",
+    "utf8": "^3.0.0",
     "yamljs": "^0.3.0"
   }
 }
