--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "clamscan": "^2.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
