--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "mssql": "^8.0.2",
+    "node-virustotal": "^3.35.0",
     "nodemon": "^2.0.15",
     "swagger-ui-express": "^4.3.0",
     "utf8": "^3.0.0",
